[package]
name = "virustotal3"
version = "3.0.1"
authors = ["g0h4n <g0h4n_0@protonmail.com>","Chihiro Hasegawa <encry1024@gmail.com>"]
keywords = ["rust", "tokyo", "virustotal", "api", "v3"]
description = "The library for VirusTotal Public API 3.0"
repository = "https://github.com/g0h4n/virustotal3-rs"
homepage = "https://github.com/g0h4n/virustotal3-rs"
documentation = "https://docs.rs/virustotal3/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json","multipart","blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"