[package]
name = "virustotal3"
version = "3.0.3"
authors = ["g0h4n <g0h4n_0@protonmail.com>","Chihiro Hasegawa <encry1024@gmail.com>"]
keywords = ["rust", "tokyo", "virustotal", "api", "v3"]
description = "The library for VirusTotal Public API 3.0"
repository = "https://github.com/g0h4n/virustotal3-rs"
homepage = "https://github.com/g0h4n/virustotal3-rs"
documentation = "https://docs.rs/virustotal3/"
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
reqwest = { version = "0.13", features = ["json","multipart","blocking","rustls"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
serde_derive = "1.0"
